[package]
name = "zerok_lib"
version = "0.1.0"
authors = ["Joe Doyle <joe@translucence.net>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git" }
ark-ff = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-scoped = { version = "0.7.0", features = ["use-async-std"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
async_executors = { version = "0.4.2", features = ["async_std"] }
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
bincode = "1.3.3"
bitvec = "0.20.1"
chacha20 = "0.8.1"
chrono = "0.4.19"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git" }
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hex = "0.4.3"
hmac = "0.11.0"
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
# per https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html, this should work for each project in the workspace
# however, the fact that the workspace subpath specifications do not match the expected package name may present a problem
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
lazy_static = "1.4.0"
mnemonic = "1.0.1"
net = { git = "https://github.com/EspressoSystems/net.git" }
phaselock = { git = "ssh://git@github.com/EspressoSystems/phaselock.git" }
phaselock-types = { git = "ssh://git@github.com/EspressoSystems/phaselock.git" }
rand = "0.7.3"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rayon = "*"
reef = { git = "https://github.com/EspressoSystems/reef.git", features = ["testing"] }
rpassword = "5.0.1"
rust-argon2 = "0.8.3"
rustyline = "9.0.0"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "*"
serde_derive = "1.0"
serde_json = "1.0.61"
serde_with = "1.10.0"
sha3 = "^0.9"
snafu = { version = "0.7", features = ["backtraces"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
tempdir = "0.3.7"
threshold_crypto = "0.4.0"
tide = "0.16.0"
tracing = "0.1.26"
zeroize = "1.3"

[dev-dependencies]
proptest = "0.8.7"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand_xoshiro = "0.4.0"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", features = ["testing"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.11.0"

[features]
mocks = []
