[package]
name = "espresso-catchup-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
seahorse = { path = "/home/brendon/code/seahorse" }
zerok_lib = { path = "../zerok_lib/" }
