[package]
name = "zerok_lib-fuzz"
version = "0.0.0"
authors = ["Jeb Bearer <jeb.bearer@translucence.net>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zerok_lib]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release.package."*"]
opt-level = 3

[[bin]]
name = "multixfr_wallet"
path = "fuzz_targets/multixfr_wallet.rs"
test = false
doc = false
